Horizontal overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,14 +7,14 @@
 html,
 body {
   height: 100vh;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 body {
   font-family: 'Barlow Semi Condensed', sans-serif;
   font-weight: 600;
   background: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 header {
